--- a/SampleProjects/Server/appsettings.json
+++ b/SampleProjects/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SampleProjects.Server-fa7ce16b-305c-42ea-9c47-e42156eee847;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SampleProjects.Server-fa7ce16b-305c-42ea-9c47-e42156eee847;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
